--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
 }
 
 img {
-    width: 600px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
+
 }
 .main-border {
-    border: 2px solid black;
+    border: 6px solid black;
+    overflow: hidden;
 }
 
 @keyframes przyblizenie {
@@ -25,20 +27,41 @@ width: 100%;
 }
 
 @keyframes oddalanie {
-    from {
-
-    }
-    to {
-transform: scale(0,5);
-    }
+   0% {
+       width: 100%;
+       height: 100%;
+       transform: scale(0.5);
+   }
+   50% {
+       transform: rotate(180deg); scale(0.1);
+   }
+   100% {
+       transform: scale(1.5);
+   }
 }
 
 
 @keyframes obrot {
     from {
-
+height: 100%;
+width: 100%;
     }
     to{
-        transform: rotate(20deg);
+        transform: rotate(360deg);
     }
 }
+
+.przyblizenie:hover {
+    animation-name: przyblizenie;
+    animation-duration: 5000ms;
+}
+
+.oddalanie:hover {
+    animation-name: oddalanie;
+    animation-duration: 5000ms;
+}
+.obrot:hover {
+    animation-name: obrot;
+    animation-duration: 5000ms;
+}
+
